styles/TextContent.module.scss
@import "./colors.module";

.container {
  display: flex;
  flex-direction: column;
}

.title {
  align-items: center;
  border-right: 1px solid $lines-color;
  display: flex;
  justify-content: space-between;
  padding: 0.5rem;
  width: 12rem;

  & > i:hover {
    color: white;
    cursor: pointer;
  }
}

.body {
  border-top: 1px solid $lines-color;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  max-height: 75vh;
  padding: 2rem;
  overflow: scroll;
}

@media only screen and (max-width: 768px) {
  .body {
    max-height: none;
  }
}

